--- a/locale/en.txt
+++ b/locale/en.txt
@@ -17,7 +17,11 @@ panorama_3A565626_2D9C_69A0_41B1_0A3805BF65DD.label = HubCam04_Interoperability
 
 ## Skin
 
+### Button
+Button_235145D6_2D9B_6958_41C0_4A42A37EC8A8.label = instructions
+
 ### Image
+Image_216449E6_2D8E_B978_41C3_A05917CBB831.url = skin/Image_216449E6_2D8E_B978_41C3_A05917CBB831_en.png
 Image_3A0437F4_2C94_36A0_41C0_004C19B36722.url = skin/Image_3A0437F4_2C94_36A0_41C0_004C19B36722_en.png
 
 ## Tour
