--- a/locale/en.txt
+++ b/locale/en.txt
@@ -8,8 +8,7 @@ PopupPDFBehaviour_AB6FE6FD_BCE4_B217_41B7_9ACBF3CC6565.url = files/instr_soundwa
 ### URL
 PopupWebFrameBehaviour_AE477026_BCFB_CE35_41C0_948BDA989286.url = https://demo.crowdclass.io/claim/ysWQKvPBQxzxDJw5
 PopupWebFrameBehaviour_A6C02AB0_BD65_D22D_41E5_80BFBFF9AA02.url = https://tfwiki.net/wiki/Soundwave_(G1)/toys
-PopupWebFrameBehaviour_A69F9AC0_BD3C_D26D_4191_654E85BA4480.url = https://www.bigbadtoystore.com/Product/VariationDetails/219152
-PopupWebFrameBehaviour_A686A1AE_BD7C_4E35_41D3_EF84BB1D2F43.url = https://www.sideshow.com/collectibles/transformers-megatron-pop-culture-shock-903817
+PopupWebFrameBehaviour_B33BE9A8_BDF9_E6FD_41C0_C2FC7E2EAEB9.url = //www.youtube.com/embed/9wJt5tOKDz4
 
 ## Media
 
@@ -30,10 +29,10 @@ video_A6532654_BD25_D215_41D8_0BFAA878C1E1.label = Transformers siege Soundwave 
 model_AF3B3626_BCFD_D235_41D0_93ECDBC0EE3A.label = soundwave_tfd
 
 ### Video
-videolevel_AB34A611_BD7B_0287_41D6_49C68C79335B.url = media/video_A5F4F6F9_BD27_F21F_41E5_31EA5C7F00AA_en.mp4
-videolevel_AB34A611_BD7B_0287_41D6_49C68C79335B.posterURL = media/video_A5F4F6F9_BD27_F21F_41E5_31EA5C7F00AA_poster_en.jpg
-videolevel_AB4C5566_BD7B_068A_41E4_5D68E6E6E93F.url = media/video_A6532654_BD25_D215_41D8_0BFAA878C1E1_en.mp4
-videolevel_AB4C5566_BD7B_068A_41E4_5D68E6E6E93F.posterURL = media/video_A6532654_BD25_D215_41D8_0BFAA878C1E1_poster_en.jpg
+videolevel_AD5679BC_BDF8_66D5_41D8_E9CC348D487F.url = media/video_A5F4F6F9_BD27_F21F_41E5_31EA5C7F00AA_en.mp4
+videolevel_AD5679BC_BDF8_66D5_41D8_E9CC348D487F.posterURL = media/video_A5F4F6F9_BD27_F21F_41E5_31EA5C7F00AA_poster_en.jpg
+videolevel_AD55299B_BDF8_66D3_41C7_5966304CED47.url = media/video_A6532654_BD25_D215_41D8_0BFAA878C1E1_en.mp4
+videolevel_AD55299B_BDF8_66D3_41C7_5966304CED47.posterURL = media/video_A6532654_BD25_D215_41D8_0BFAA878C1E1_poster_en.jpg
 
 ### Video Subtitles
 
