--- a/locale/en.txt
+++ b/locale/en.txt
@@ -34,10 +34,19 @@ panorama_434D0E9F_2698_FE22_41B6_0CF3245CD295.label = HubCam04_POT_HUB
 video_2E543883_2091_B8E9_4194_9BA6ED2B32B4.label = Port of Tyne Brand video 2023_480p
 
 ### Video
-videolevel_7FDF17F3_26F9_2DE3_41C2_E298BB981F4D.url = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_en.mp4
-videolevel_7FDF17F3_26F9_2DE3_41C2_E298BB981F4D.posterURL = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_poster_en.jpg
+videolevel_1ED897C4_269B_EE25_41BE_B25F3EF94EAE.url = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_en.mp4
+videolevel_1ED897C4_269B_EE25_41BE_B25F3EF94EAE.posterURL = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_poster_en.jpg
 
 ### Video Subtitles
+
+## Skin
+
+### Button
+Button_66EA4244_26E9_2625_41A6_E0A6EAF800AE.label = I N S T R U C T I O N S
+
+### Image
+Image_655D714C_26EB_E225_41B3_0FF124CC22CA.url = skin/Image_655D714C_26EB_E225_41B3_0FF124CC22CA_en.png
+Image_764B3212_26EB_663D_41B0_44449FBF8897.url = skin/Image_764B3212_26EB_663D_41B0_44449FBF8897_en.png
 
 ## Tour
 
