--- a/locale/en.txt
+++ b/locale/en.txt
@@ -34,8 +34,8 @@ panorama_434D0E9F_2698_FE22_41B6_0CF3245CD295.label = HubCam04_POT_HUB
 video_2E543883_2091_B8E9_4194_9BA6ED2B32B4.label = Port of Tyne Brand video 2023_480p
 
 ### Video
-videolevel_1ED897C4_269B_EE25_41BE_B25F3EF94EAE.url = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_en.mp4
-videolevel_1ED897C4_269B_EE25_41BE_B25F3EF94EAE.posterURL = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_poster_en.jpg
+videolevel_016896A1_27B9_EE1F_41C1_09CD38D5DD93.url = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_en.mp4
+videolevel_016896A1_27B9_EE1F_41C1_09CD38D5DD93.posterURL = media/video_2E543883_2091_B8E9_4194_9BA6ED2B32B4_poster_en.jpg
 
 ### Video Subtitles
 
@@ -45,8 +45,12 @@ videolevel_1ED897C4_269B_EE25_41BE_B25F3EF94EAE.posterURL = media/video_2E543883
 Button_66EA4244_26E9_2625_41A6_E0A6EAF800AE.label = I N S T R U C T I O N S
 
 ### Image
-Image_655D714C_26EB_E225_41B3_0FF124CC22CA.url = skin/Image_655D714C_26EB_E225_41B3_0FF124CC22CA_en.png
+Image_02B0F260_26A9_661D_41B5_D64F0BE90634.url = skin/Image_02B0F260_26A9_661D_41B5_D64F0BE90634_en.png
+Image_03EC4125_26AF_6267_415B_DFC3A078558A.url = skin/Image_03EC4125_26AF_6267_415B_DFC3A078558A_en.png
 Image_764B3212_26EB_663D_41B0_44449FBF8897.url = skin/Image_764B3212_26EB_663D_41B0_44449FBF8897_en.png
+
+### Label
+Label_02CB74B3_27B9_2263_41B8_CA3B6304D674.text = Select teleport destination
 
 ## Tour
 
